--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,400,600,900">
-    <title>Pasapalabra</title>
+    <title>Pasapasuk</title>
 </head>
 <body>
 	<section class="game">
 		<div class="circle-container">
 			<div class="title-container">
-				<p class="title">PASAPALABRA</p>
+				<p class="title">PASAPASUK</p>
 			</div>
 		    <ul class="circle">
 		        <li class="item">A</li>
