--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 		<div class="controls-container">
 			<i id="js--close" class="icon-close hidden"></i>
 			<div id="js--ng-controls" class="ng-controls">
-				<h4>Bienvenidos al juego de Pasapalabra de Skylab Coders Academy!</h4>
-				<p>Basado en el exitoso concurso de televisión Pasapalabra de Telecinco, las normas son muy sencillas:</p>
-				<p>Se mostraran unas definiciones por pantalla y el usuario deberá responder con la palabra a la que corresponden. El usuario tiene la opción de decir Pasapalabra y dejar esa definición para mas adelante.</p>
-				<p>El programa es sensible a las acentuación, asi que se debe introducir la palabra sin tilde. Es posible utilizar la tecla ENTER para enviar la palabra y el SPACE para hacer pasapalabra.</p>
+				<h4>Bienvenidos al juego de PasaPasuk de IATUI!</h4>
+				<p>Las normas son muy sencillas:</p>
+				<p>Se mostraran unas definiciones por pantalla y el usuario deberá responder con la palabra a la que corresponden. El usuario tiene la opción de decir PasaPasuk y dejar esa definición para mas adelante.</p>
+				<p>El programa es sensible a las acentuación, asi que se debe introducir la palabra sin tilde. Es posible utilizar la tecla ENTER para enviar la palabra y el SPACE para hacer pasapasuk.</p>
 				<a id="js--new-game" class="btn"><i class="icon-play"></i>Jugar</a>
 			</div>
 			<div id="js--question-controls" class="question-controls hidden">
@@ -62,7 +62,7 @@
 				<input id="js--user-answer" type="text" placeholder="Introduce tu respuesta">
 
 				<a id="js--send" class="btn btn--green" href="#">Enviar</a>
-				<a id="js--pasapalabra" class="btn" href="#">Pasapalabra</a>
+				<a id="js--pasapalabra" class="btn" href="#">PasaPasuk</a>
 			</div>
 			<div id="js--pa-controls" class="pa-controls hidden">
 				<p id="js--end-title" class="title"></p>
@@ -72,7 +72,7 @@
 		</div>
 	</section>
 	<footer>
-		<p>Made with <i class="icon-heart"></i> by <a href="http://www.twitter.com/marioterron157">Mario Terron</a></p>
+		
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="js/app.js"></script>
